# EBAC_BookStore

./: README.md  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py
order/: __init__.py  factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/test_viewset/: test_order_viewset.py
order/tests/: test_order_view.py  test_serializers.py
order/viewsets/: order_viewset.py
product/: __init__.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_alter_category_description_alter_product_categories_and_more.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: test_category_view.py  test_product_view.py  test_serializers.py
product/tests_viewset/: test_product_viewset.py
product/viewsets/: product_viewset.py
